<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shady.popularmovies.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movieImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin" />

            <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_toEndOf="@id/movieImg"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/movieVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieReleaseDate"
                android:layout_toEndOf="@id/movieImg"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/addToFavorite"
                android:layout_width="wrap_content"
                android:drawableStart="@drawable/ic_favorite_border_black_24dp"
                android:drawablePadding="@dimen/drawable_margin"
                android:layout_below="@id/movieVoteAverage"
                android:text="@string/my_favorite"
                android:onClick="addToFavorite"
                android:background="@android:color/transparent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_toEndOf="@id/movieImg"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <TextView
            android:id="@+id/movieOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/videosTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videosTitle"
            android:paddingTop="@dimen/fab_margin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/movieVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/reviewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewsTitle"
            android:paddingTop="@dimen/fab_margin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/movieReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
